--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,10 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Variables de entorno
 .env
-database/seeders/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
