--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,140 @@
-# Server
+# ============================================
+# CONFIGURACIÓN DEL ENTORNO
+# Sistema Integral de Gestión Comercial
+# ============================================
+# 
+# IMPORTANTE:
+# - Cambiar todos los valores en producción
+# - Usar valores seguros y aleatorios para secrets
+# ============================================
+
+# ============================================
+# ENTORNO DE LA APLICACIÓN
+# ============================================
 NODE_ENV=development
+# Valores posibles: development, production, test
+
+# ============================================
+# SERVIDOR
+# ============================================
 PORT=3000
+# Puerto donde correrá el servidor
 
-# Database
+# ============================================
+# BASE DE DATOS POSTGRESQL
+# ============================================
 DB_HOST=localhost
+# Host de la base de datos
+
 DB_PORT=5432
+# Puerto de PostgreSQL
+
 DB_NAME=gestion_comercial
+# Nombre de la base de datos
+
 DB_USER=postgres
-DB_PASS=your_password
+# Usuario de PostgreSQL
 
-# JWT
-JWT_SECRET=your_super_secret_key_here
+DB_PASS=tu_password_aqui
+# CAMBIAR: Contraseña de PostgreSQL
+# Ejemplo: DB_PASS=MiPassword123Seguro
+
+# ============================================
+# JWT - AUTENTICACIÓN
+# ============================================
+JWT_SECRET=tu_clave_secreta_muy_segura_cambiala_en_produccion_12345
+# CAMBIAR EN PRODUCCIÓN: Clave secreta para firmar tokens JWT
+# Genera una clave aleatoria segura (mínimo 32 caracteres)
+# Ejemplo: node -e "console.log(require('crypto').randomBytes(64).toString('base64'))" ó openssl rand -base64 64
+
 JWT_EXPIRES_IN=24h
+# Tiempo de expiración del access token
+# Valores: 15m, 1h, 24h, 7d, etc.
 
-# Email
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your_email@gmail.com
-SMTP_PASS=your_password
-```
+JWT_REFRESH_SECRET=tu_clave_refresh_secreta_muy_segura_cambiala_en_produccion_67890
+# CAMBIAR EN PRODUCCIÓN: Clave secreta para refresh tokens
+# Debe ser diferente a JWT_SECRET
+# Ejemplo: node -e "console.log(require('crypto').randomBytes(64).toString('base64'))" ó openssl rand -base64 64
 
-### 3. `.gitignore`
-```
-node_modules/
-.env
-*.log
-dist/
-build/
-.DS_Store
+JWT_REFRESH_EXPIRES_IN=7d
+# Tiempo de expiración del refresh token
+# Valores: 7d, 30d, 90d, etc.
+
+# ============================================
+# CORS - SEGURIDAD
+# ============================================
+CORS_ORIGIN=*
+# Orígenes permitidos para CORS
+# En desarrollo: * (todos)
+# En producción: https://tudominio.com,https://www.tudominio.com
+# Múltiples orígenes separados por coma
+
+# ============================================
+# RATE LIMITING
+# ============================================
+SKIP_RATE_LIMIT=false
+# Solo para desarrollo: saltarse rate limiting
+# Valores: true, false
+
+# ============================================
+# LOGGING
+# ============================================
+LOG_LEVEL=debug
+# Nivel de logging
+# Valores: error, warn, info, debug
+# Producción: info o warn
+# Desarrollo: debug
+
+# ============================================
+# ARCHIVOS Y UPLOADS
+# ============================================
+MAX_FILE_SIZE=2097152
+# Tamaño máximo de archivo en bytes
+# 2097152 = 2MB
+# 5242880 = 5MB
+# 10485760 = 10MB
+
+# ============================================
+# EMAIL (Para futuras implementaciones)
+# ============================================
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=tu-email@gmail.com
+# SMTP_PASS=tu-password-app
+# SMTP_FROM=noreply@tudominio.com
+
+# ============================================
+# REDIS (Para futuras implementaciones - cache y sessions)
+# ============================================
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+# REDIS_PASSWORD=
+# REDIS_DB=0
+
+# ============================================
+# BACKUPS
+# ============================================
+# BACKUP_PATH=/var/backups/gestion-comercial
+# BACKUP_RETENTION_DAYS=30
+
+# ============================================
+# NOTIFICACIONES (Para futuras implementaciones)
+# ============================================
+# TWILIO_ACCOUNT_SID=
+# TWILIO_AUTH_TOKEN=
+# TWILIO_PHONE_NUMBER=
+
+# ============================================
+# FACTURACIÓN ELECTRÓNICA (Para futuras implementaciones)
+# ============================================
+# SRI_AMBIENTE=1
+# SRI_TIPO_EMISION=1
+# CERTIFICADO_PATH=
+# CERTIFICADO_PASSWORD=
+
+# ============================================
+# DESARROLLO
+# ============================================
+DEBUG=false
+# Habilitar logs de debugging
+# Valores: true, false
